namespace cibelle.Models
{
    public class Vendedor
    {
        public string Id { get; set; }
        public string Nome { get; set; }


    }
}